Changelog
=========

2.0 - unreleased
----------------

* Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

* Cleaned up package metadata and general code.
  [hannosch]

* Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

* Updated freedesktop.org shared-mime-info from the
  shared-mime-info-0.51.tar.bz2 file.
  [sidnei]

* Added Office 2007 mime types to the mime.types file, which was
  copied from Apache ages ago. The current version of Apache doesn't
  contain those yet, nor does the shared-mime-info. Care must be taken
  when this file is updated again to make sure those mime types are
  not removed accidentally.
  [sidnei]

* Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
  Consider branching before this revision if release required before Plone 4.
  [elro]

1.6.1 (2008-09-30)
------------------

* Updated freedesktop.org shared-mime-info from the
  shared-mime-info-0.23.tar.bz2 file.
  [hannosch]

* Added metadata.xml file to the profile.
  [hannosch]

* Changed fixUpSMIGlobs not to reinitialize the smi_mimetypes, when they are
  already initialized during tool creation.
  [hannosch]

* Compile the 750KiB freedesktop.org.xml file to a binary format which gets
  loaded on Zope startup instead of reparsing the XML file each time. If the
  modification time of the source xml file changes, the binary file is
  automatically recreated. If the binary file cannot be created the xml file
  is reparsed each time as before.
  [hannosch]

* Change some mimetypes returnd by guessMime to match the mimetypes
  registered in mtr (from freedesktop.org's mime database).
  [csenger]

* Ensure that lookup doesn't return an empty tuple if asked with a
  mimetypestring returned by guessMime. 
  Fixes http://dev.plone.org/plone/ticket/7876
  [csenger]

* Lookup by extensions (not glob) as submitted and retry it with lower case to
  catch filenames like 'file.TXT'
  [csenger]
