@@ -4,6 +4,9 @@ Changelog
 2.0 - unreleased
 ----------------
 
+* Avoid acquiring `mimetypes_registry` and call it via a proper API.
+  [hannosch]
+
 * Avoid acquiring `portal_properties` and call it via a proper API.
   [hannosch]
 
